--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,7 +28,7 @@
       <div class="interface">
         <div class="logo">
           <a href="#">
-            <img src="/images/logo.png" alt="" />
+            <img src="images/logo.png" alt="" />
           </a>
         </div>
         <!--logo-->
@@ -101,7 +101,7 @@
           <div class="flex">
             <div class="especialidades-box">
               <i class="bi bi-code-square"></i>
-              <h3>Webe Site</h3>
+              <h3>Web Site</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nesciunt quasi perspiciatis.
